--- a/wibb-android/app/src/main/res/layout/activity_main.xml
+++ b/wibb-android/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,50 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_invalid_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/red"
+            app:cardCornerRadius="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image_card_invalid_hint"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_error_outline_24_white" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toStartOf="@id/image_button_x_card_invalid_hint"
+                    android:layout_toEndOf="@+id/image_card_invalid_hint"
+                    android:text="@string/some_offers_listed_here"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+                <ImageButton
+                    android:id="@+id/image_button_x_card_invalid_hint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:background="@android:color/transparent"
+                    android:onClick="hideInvalidHint"
+                    android:src="@drawable/ic_baseline_close_24_white" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_offers"
             android:layout_width="match_parent"
@@ -37,8 +81,8 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:backgroundTint="@color/colorAccent"/>
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
