feat(android): Added Dark theme

--- a/wibb-android/app/src/main/res/layout/grid_item.xml
+++ b/wibb-android/app/src/main/res/layout/grid_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="75dp"
     android:layout_height="100dp"
     android:layout_margin="5dp"
-    cardview:cardCornerRadius="10dp"
+    cardview:cardCornerRadius="?attr/cornerRadius"
 
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
