--- a/wibb-android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/wibb-android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,14 +1,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+        android:width="108dp"
+        android:height="108dp"
+        android:viewportWidth="108"
+        android:viewportHeight="108">
 
-
-    <item android:drawable="@drawable/ic_beer_black_white_24dp"
-        android:width="35dp"
-        android:height="35dp"
-        android:gravity="center"/>
+    <item
+            android:drawable="@drawable/ic_beer_colored_24dp"
+            android:width="35dp"
+            android:height="35dp"
+            android:gravity="center" />
 
 </layer-list>
