--- a/wibb-android/app/src/main/res/drawable/ic_add_24dp.xml
+++ b/wibb-android/app/src/main/res/drawable/ic_add_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M14.4,6L14,4H5v17h2v-7h5.6l0.4,2h7V6z"/>
+            android:fillColor="?android:attr/colorForeground"
+            android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
 </vector>
