--- a/wibb-android/app/src/main/res/drawable/ic_flag_24dp.xml
+++ b/wibb-android/app/src/main/res/drawable/ic_flag_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z"/>
+            android:fillColor="?android:attr/colorForeground"
+            android:pathData="M14.4,6L14,4H5v17h2v-7h5.6l0.4,2h7V6z" />
 </vector>
