--- a/wibb-android/app/src/main/res/drawable/ic_remove_24dp.xml
+++ b/wibb-android/app/src/main/res/drawable/ic_remove_24dp.xml
@@ -5,5 +5,5 @@
         android:width="24dp">
     <path
             android:fillColor="?android:attr/colorForegroundInverse"
-            android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z" />
+            android:pathData="M19,13H5v-2h14v2z" />
 </vector>
