--- a/wibb-android/app/src/main/res/drawable/seekarc_thumb.xml
+++ b/wibb-android/app/src/main/res/drawable/seekarc_thumb.xml
@@ -1,11 +1,9 @@
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="oval">
 
-    <solid
-        android:color="@android:color/black"/>
+    <solid android:color="?android:attr/colorForeground" />
 
     <size
-        android:width="24dp"
-        android:height="24dp"/>
+            android:width="24dp"
+            android:height="24dp" />
 </shape>
