--- a/wibb-android/app/src/main/res/layout/activity_add_offer.xml
+++ b/wibb-android/app/src/main/res/layout/activity_add_offer.xml
@@ -1,164 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AddOfferActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".AddOfferActivity">
 
 
     <com.shuhart.stepview.StepView
-        android:id="@+id/step_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:padding="16dp"
-        app:sv_animationDuration="300"
-        app:sv_animationType="All"
-        app:sv_doneCircleColor="@color/yet"
-        app:sv_doneCircleRadius="12dp"
-        app:sv_doneStepLineColor="@color/yet"
-        app:sv_doneStepMarkColor="@color/colorAccent"
-        app:sv_nextStepLineColor="@color/notyet"
-        app:sv_nextTextColor="@color/notyet"
-        app:sv_selectedCircleColor="@color/colorAccent"
-        app:sv_selectedCircleRadius="12dp"
-        app:sv_selectedStepNumberColor="@color/yet"
-        app:sv_selectedTextColor="@color/yet"
-        app:sv_stepLineWidth="1dp"
-        app:sv_stepNumberTextSize="12sp"
-        app:sv_stepPadding="4dp"
-        app:sv_stepViewStyle="@style/StepView"
+            android:id="@+id/step_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:padding="16dp"
+            app:sv_animationDuration="300"
+            app:sv_animationType="All"
+            app:sv_doneCircleColor="@color/textFaded"
+            app:sv_doneCircleRadius="12dp"
+            app:sv_doneStepLineColor="?android:attr/colorForeground"
+            app:sv_doneStepMarkColor="?android:attr/colorForegroundInverse"
+            app:sv_nextStepLineColor="@color/textFaded"
+            app:sv_nextTextColor="@color/textFaded"
+            app:sv_selectedCircleColor="@color/colorAccent"
+            app:sv_selectedCircleRadius="12dp"
+            app:sv_selectedStepNumberColor="@color/textDark"
+            app:sv_selectedTextColor="?android:attr/colorForeground"
+            app:sv_stepLineWidth="1dp"
+            app:sv_stepNumberTextSize="12sp"
+            app:sv_stepPadding="4dp"
+            app:sv_stepViewStyle="@style/StepView"
 
-        app:sv_steps="@array/add_offer_steps">
+            app:sv_steps="@array/add_offer_steps">
 
     </com.shuhart.stepview.StepView>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/ll_footer_addoffer"
-        android:layout_below="@id/step_view">
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_stores"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:visibility="visible" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_beers"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout_price"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:layout_above="@id/ll_footer_add_offer"
+            android:layout_below="@id/step_view">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_stores"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:visibility="visible" />
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_beers"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone" />
+
+        <LinearLayout
+                android:id="@+id/linearLayout_price"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:visibility="gone">
 
             <FrameLayout
-                android:id="@+id/seekArcContainer"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                    android:id="@+id/seekArcContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
 
                 <com.triggertrap.seekarc.SeekArc
-                    android:id="@+id/seekArc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="20dp"
-                    android:padding="20dp"
-                    app:max="25"
-                    app:progressColor="@color/colorAccent"
-                    app:rotation="180"
-                    app:startAngle="30"
-                    app:sweepAngle="300"
-                    app:thumb="@drawable/seekarc_thumb"
-                    app:touchInside="true" />
+                        android:id="@+id/seekArc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="20dp"
+                        android:padding="20dp"
+                        app:max="25"
+                        app:progressColor="@color/colorAccent"
+                        app:rotation="180"
+                        app:startAngle="30"
+                        app:sweepAngle="300"
+                        app:thumb="@drawable/seekarc_thumb"
+                        app:touchInside="true" />
 
                 <TextView
-                    android:id="@+id/seekArcProgress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/addoff_price_default"
-                    android:textSize="60sp" />
+                        android:id="@+id/seekArcProgress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/addoff_price_default"
+                        android:textSize="60sp" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_priceDone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:layout_margin="5dp"
-                    android:src="@drawable/ic_arrow_forward_black_24dp"
-                    app:backgroundTint="@color/colorAccent"
-                    app:elevation="0dp">
-
-                </com.google.android.material.floatingactionbutton.FloatingActionButton>
+                        android:id="@+id/fab_priceDone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:layout_margin="5dp"
+                        android:src="@drawable/ic_arrow_forward_24dp"
+                        app:backgroundTint="@color/colorAccent"
+                        android:tint="@color/textDark"
+                        app:elevation="0dp" />
 
             </FrameLayout>
         </LinearLayout>
 
         <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
-            android:id="@+id/calendar_range"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            app:disable_date_color="#ABABAB"
-            app:range_color="@color/colorAccent"
-            app:selected_date_circle_color="#000000"
-            app:title_color="@color/colorAccent"></com.archit.calendardaterangepicker.customviews.DateRangeCalendarView>
+                android:id="@+id/calendar_range"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                app:disable_date_color="@color/textFaded"
+                app:range_color="@color/colorAccent"
+                app:week_color="?android:attr/colorForeground"
+                app:selected_date_circle_color="?android:attr/colorForeground"
+                app:selected_date_color="?android:attr/colorForegroundInverse"
+                app:title_color="@color/colorAccent" />
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/ll_footer_addoffer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_submitOffer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:layout_margin="5dp"
-            android:onClick="submitNewOffer"
-            android:src="@drawable/ic_done_white_24dp"
-            android:translationY="100dp"
-            app:backgroundTint="@color/green"></com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-        <LinearLayout
+            android:id="@+id/ll_footer_add_offer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
+            android:layout_alignParentBottom="true">
 
-            <TextView
-                style="?android:attr/listSeparatorTextViewStyle"
-                android:text="@string/addoff_header_offerPreview" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_submitOffer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|top"
+                android:layout_margin="5dp"
+                android:onClick="submitNewOffer"
+                android:src="@drawable/ic_done_white_24dp"
+                android:translationY="100dp"
+                app:backgroundTint="@color/green" />
 
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:baselineAligned="false"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+            <TextView
+                    style="?android:attr/listSeparatorTextViewStyle"
+                    android:text="@string/addoff_header_offerPreview" />
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:baselineAligned="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
                 <include
-                    android:id="@+id/incl_cardView_currentOffer"
-                    layout="@layout/offer_card_shrinked"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                        android:id="@+id/incl_cardView_currentOffer"
+                        layout="@layout/offer_card_shrinked"
+                        android:layout_margin="5dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
 
             </LinearLayout>
 
