--- a/wibb-android/app/src/main/res/layout/activity_main.xml
+++ b/wibb-android/app/src/main/res/layout/activity_main.xml
@@ -1,88 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".MainActivity">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_invalid_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/red"
-            app:cardCornerRadius="10dp">
+                android:id="@+id/card_invalid_hint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/red"
+                app:cardCornerRadius="?attr/cornerRadius">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/image_card_invalid_hint"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_baseline_error_outline_24_white" />
+                        android:id="@+id/image_card_invalid_hint"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_centerVertical="true"
+                        app:tint="@color/textLight"
+                        android:src="@drawable/ic_baseline_error_outline_24dp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toStartOf="@id/image_button_x_card_invalid_hint"
-                    android:layout_toEndOf="@+id/image_card_invalid_hint"
-                    android:text="@string/some_offers_listed_here"
-                    android:textColor="@color/white"
-                    android:textSize="15sp" />
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_toStartOf="@id/image_button_x_card_invalid_hint"
+                        android:layout_toEndOf="@+id/image_card_invalid_hint"
+                        android:text="@string/some_offers_listed_here"
+                        android:textColor="@color/textLight"
+                        android:textSize="15sp" />
 
                 <ImageButton
-                    android:id="@+id/image_button_x_card_invalid_hint"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:background="@android:color/transparent"
-                    android:onClick="hideInvalidHint"
-                    android:src="@drawable/ic_baseline_close_24_white" />
+                        android:id="@+id/image_button_x_card_invalid_hint"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:tint="@color/textLight"
+                        android:background="@android:color/transparent"
+                        android:onClick="hideInvalidHint"
+                        android:src="@drawable/ic_baseline_close_24dp" />
 
             </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_offers"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+                android:id="@+id/recyclerView_offers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView_noOffers"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/no_offers"
-        android:visibility="gone">
+            android:id="@+id/textView_noOffers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_offers"
+            android:visibility="gone">
 
     </TextView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_addOffer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add_black_24dp"
-        app:backgroundTint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
+            android:id="@+id/fab_addOffer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_24dp"
+            android:tint="@color/textDark"
+            app:backgroundTint="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
