--- a/wibb-android/app/src/main/res/layout/favourite_item.xml
+++ b/wibb-android/app/src/main/res/layout/favourite_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:layout_margin="5dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="?attr/cornerRadius">
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
                 android:layout_height="60dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_beer_black_24dp"
+                android:src="@drawable/ic_beer_24dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="5dp">
