--- a/wibb-android/app/src/main/res/layout/offer_card_shrinked.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card_shrinked.xml
@@ -11,7 +11,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="6dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="?attr/cornerRadius"
         android:id="@+id/offer_card">
 
             <LinearLayout
@@ -23,7 +23,6 @@
                     android:id="@+id/offer_card_beer_img"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@android:color/white"
                     android:scaleType="fitCenter"
                     android:src="@mipmap/drop_plus" />
 
@@ -34,8 +33,7 @@
                     android:text="@string/beer"
                     android:textSize="12sp"
                     android:gravity="center_vertical"
-                    android:padding="5dp"
-                    android:background="@color/white" />
+                    android:padding="5dp" />
 
                 <ImageView
                     android:id="@+id/offer_card_gradient"
@@ -46,7 +44,6 @@
                     android:id="@+id/offer_card_store_img"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@android:color/white"
                     android:scaleType="fitCenter"
                     android:src="@mipmap/drop_plus" />
 
