--- a/wibb-android/app/src/main/res/values/arrays.xml
+++ b/wibb-android/app/src/main/res/values/arrays.xml
@@ -7,5 +7,17 @@
         <item>@string/addoff_choose_price</item>
         <item>@string/addoff_choose_time</item>
     </string-array>
+
+    <string-array name="theme_labels">
+        <item>@string/theme_light</item>
+        <item>@string/theme_dark</item>
+        <item>@string/theme_system</item>
+    </string-array>
+
+    <string-array name="theme_keys">
+        <item>1</item>
+        <item>2</item>
+        <item>-1</item>
+    </string-array>
     
 </resources>
