--- a/wibb-android/app/src/main/res/values/colors.xml
+++ b/wibb-android/app/src/main/res/values/colors.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/white</color>
-    <color name="colorPrimaryDark">@color/yet</color>
-    <color name="colorAccent">@color/yello</color>
 
-    <color name="yet">#000000</color>
-    <color name="notyet">#808080</color>
-    <color name="white">#FFFFFF</color>
+    <!-- Brand colors-->
+    <color name="colorAccent">@color/yellow</color>
+    <color name="yellow">#FFC107</color>
+    <color name="yellow_shadow">#b38600</color>
 
-    <color name="yello">#FFC107</color>
-    <color name="yelloshadow">#b38600</color>
+    <!-- Static light/dark colors. Do NOT change with theme-->
+    <color name="textDark">#000000</color>
+    <color name="textLight">#FFFFFF</color>
+    <color name="textFaded">#808080</color>
 
-    <color name="red">#FF0000</color>
-    <color name="green">#009900</color>
+    <!-- Additional colors -->
+    <color name="red">#d04040</color>
+    <color name="green">#40a040</color>
+
 </resources>
