--- a/wibb-android/app/src/main/res/menu/main_menu.xml
+++ b/wibb-android/app/src/main/res/menu/main_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_item_settings"
-        android:icon="@drawable/ic_settings_24dp"
-        android:title="@string/title_activity_settings"
-        app:showAsAction="ifRoom"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+            android:id="@+id/menu_item_settings"
+            android:icon="@drawable/ic_settings_24dp"
+            android:title="@string/title_activity_settings"
+            app:showAsAction="ifRoom" />
 
 </menu>
