--- a/wibb-android/app/src/main/res/xml/root_preferences.xml
+++ b/wibb-android/app/src/main/res/xml/root_preferences.xml
@@ -18,9 +18,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-            app:title="@string/settings_header_global"
+            app:title="@string/settings_header_dev_mode"
+            app:key="dev_mode_prefs"
             app:iconSpaceReserved="false"
-            app:isPreferenceVisible="true">
+            app:isPreferenceVisible="false">
 
         <EditTextPreference
                 app:key="apiurl"
@@ -29,7 +30,7 @@
                 app:iconSpaceReserved="false"
                 app:isPreferenceVisible="true"
                 app:enabled="true"
-                app:defaultValue="https://wibb.host" />
+                app:defaultValue="https://www.wibb.at" />
 
     </PreferenceCategory>
 
