refactor(android): Renamed api url keys
- "apiurl" -> "pref_api_url"
- "settings_global_apiurl" -> "settings_dev_mode_api_url"

--- a/wibb-android/app/src/main/res/xml/root_preferences.xml
+++ b/wibb-android/app/src/main/res/xml/root_preferences.xml
@@ -24,8 +24,8 @@
             app:isPreferenceVisible="false">
 
         <EditTextPreference
-                app:key="apiurl"
-                app:title="@string/settings_global_apiurl"
+                app:key="pref_api_url"
+                app:title="@string/settings_dev_mode_api_url"
                 app:useSimpleSummaryProvider="true"
                 app:iconSpaceReserved="false"
                 app:isPreferenceVisible="true"
