--- a/wibb-android/app/src/main/res/layout/favourite_item.xml
+++ b/wibb-android/app/src/main/res/layout/favourite_item.xml
@@ -25,7 +25,8 @@
                     android:src="@drawable/ic_beer_24dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginStart="5dp"
-                    android:layout_marginBottom="5dp">
+                    android:layout_marginBottom="5dp"
+                    android:contentDescription="@string/content_desc_brand_icon">
 
             </ImageView>
         </FrameLayout>
@@ -33,7 +34,8 @@
         <ImageView
                 android:id="@+id/fav_card_gradient"
                 android:layout_width="20dp"
-                android:layout_height="match_parent"></ImageView>
+                android:layout_height="match_parent"
+                android:contentDescription="@string/content_desc_gradient" />
 
         <TextView
                 android:id="@+id/fav_item_txt"
@@ -43,10 +45,10 @@
                 android:scaleType="fitCenter"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:text="Name"
+                android:text="@string/placeholder_name"
                 android:textSize="25sp"
                 android:fontFamily="sans-serif-light"
-                android:layout_weight="1"></TextView>
+                android:layout_weight="1" />
 
         <CheckBox
                 android:id="@+id/fav_card_checkbox"
