--- a/wibb-android/app/src/main/res/menu/main_menu.xml
+++ b/wibb-android/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
     <item
             android:id="@+id/menu_item_settings"
             android:icon="@drawable/ic_settings_24dp"
-            android:title="@string/title_activity_settings"
+            android:title="@string/settings_title"
             app:showAsAction="ifRoom" />
 
 </menu>
